fix: textFieldの文章を追加

--- a/packages/spindle-ui/src/Form/TextField.mdx
+++ b/packages/spindle-ui/src/Form/TextField.mdx
@@ -42,6 +42,8 @@ import '@openameba/spindle-ui/Form/TextField.css';
 
 ## Large With Error
 
+エラー表示にするには`hasError`プロパティを付与してください。また、`:user-invalid`擬似クラスが付与される条件では`hasError`プロパティに関係なくエラー表示になります。
+
 <Story of={TextFieldStories.LargeWithError} />
 
 <Source
