--- a/packages/spindle-ui/src/Form/InlineDropDown.mdx
+++ b/packages/spindle-ui/src/Form/InlineDropDown.mdx
@@ -5,6 +5,10 @@ import * as InlineDropDownStories from './InlineDropDown.stories';
 
 # Form/InlineDropDown
 
+アイテム一覧画面の並び替え等の目的で利用されるDropDown型のコンポーネントです。一般的なフォーム画面の選択UIで利用することは想定していません。 InlineDropDownは試験的なコンポーネントであるため、破壊的な変更や削除等おこなわれる可能性があることに注意して利用してください。
+
+
+
 <Source
   language="javascript"
   code={`
@@ -22,6 +26,8 @@ import '@openameba/spindle-ui/Form/InlineDropDown.css';
   language="html"
   code={`<link rel="stylesheet" href="https://unpkg.com/@openameba/spindle-ui/Form/InlineDropDown.css">`}
 />
+
+このコンポーネントの利用にはJavaScriptでの処理が必要なため、HTMLのみでは正常に動作しません。[React版](https://github.com/openameba/spindle/tree/main/packages/spindle-ui/src/Form/InlineDropDown.tsx)を参考に実装してください。
 
 ## Medium
 
@@ -89,3 +95,29 @@ import '@openameba/spindle-ui/Form/InlineDropDown.css';
   `}
 />
 
+## Accessibility
+
+aria-label属性やlabel要素で適切なラベリングをしてください。
+
+<Source
+  code={`
+<InlineDropDown aria-label="期間を選択" id="term-selection" name="term" placeholder="期間を選択">
+  <option value="today">今日</option>
+  <option value="seven_days">7日間</option>
+  <option value="thirty_days">30日間</option>
+</InlineDropDown>
+  `}
+/>
+
+<Source
+  code={`
+<>
+  <InputLabel id="term-selection">期間を選択</InputLabel>
+  <InlineDropDown id="term-selection" name="term" placeholder="期間を選択">
+    <option value="today">今日</option>
+    <option value="seven_days">7日間</option>
+    <option value="thirty_days">30日間</option>
+  </InlineDropDown>
+</>
+  `}
+/>
