--- a/packages/spindle-ui/src/Form/InvalidMessage.mdx
+++ b/packages/spindle-ui/src/Form/InvalidMessage.mdx
@@ -43,3 +43,12 @@ import '@openameba/spindle-ui/Form/InvalidMessage.css';
   `}
 />
 
+## Accessibility
+
+コンポーネントからはアプリケーション内での使われ方や重要度がわからないため、アラートに関する属性は付与していません。そのため、コンポーネント利用時には[alert role](https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/ARIA_Techniques/Using_the_alert_role)や[ARIA live regions](https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/ARIA_Live_Regions)を用いて支援技術に通知してください。
+
+<Source
+  code={`
+<InvalidMessage role="alert" visible>ファイル形式が正しくありません</InvalidMessage>
+  `}
+/>
