--- a/packages/spindle-ui/src/Form/TextArea.mdx
+++ b/packages/spindle-ui/src/Form/TextArea.mdx
@@ -42,6 +42,9 @@ import '@openameba/spindle-ui/Form/TextArea.css';
 
 ## Text Area With Error
 
+エラー表示にするには`hasError`プロパティを付与してください。また、`:user-invalid`擬似クラスが付与される条件では`hasError`プロパティに関係なくエラー表示になります。
+
+
 <Story of={TextAreaStories.TextAreaWithError} />
 
 <Source
