fix: 不足分を復活

--- a/packages/spindle-ui/src/DropdownMenu/DropdownMenu.mdx
+++ b/packages/spindle-ui/src/DropdownMenu/DropdownMenu.mdx
@@ -28,13 +28,13 @@ import '@openameba/spindle-ui/DropdownMenu/DropdownMenu.css';
 - `open`(必須): DropdownMenuの開閉状態です。DropdownMenuは`open`プロパティの値を見て開閉を行うため、`onClick`や`onClose`内で`open`プロパティを変更してください。
 - `triggerRef`（必須）: Triggerボタンのrefを指定してください。
 - `onClose`（必須）: `open`プロパティをfalseにするための処理を指定してください。
-- `position`（任意）: DropdownMenuをボタンに対してどの位置に開くかを指定します。デフォルトは`leftTop`で、その他にも`topLeft`, `topCenter`, `topRight`, `rightTop`, `rightCenter`, `rightBottom`, `bottomLeft`, `bottomCenter`, `bottomRight`, `leftTop`, `leftCenter`, `leftBottom`を指定することができます。
-- `variant`（任意）: DropdownMenuの種類を指定します。デフォルトは`text`で、その他にも`textWithIcon`, `headWithIcon`, `headWithIconAndCaption`を指定することができます。
-- `id`（任意）: idを指定することができます。
+- `position`（任意）: DropdownMenuをボタンに対してどの位置に開くかを指定します。デフォルトは`leftTop`で、その他にも`topLeft`, `topCenter`, `topRight`, `rightTop`, `rightCenter`, `rightBottom`, `bottomLeft`, `bottomCenter`, `bottomRight`, `leftTop`, `leftCenter`, `leftBottom`を指定できます。
+- `variant`（任意）: DropdownMenuの種類を指定します。デフォルトは`text`で、その他にも`textWithIcon`, `headWithIcon`, `headWithIconAndCaption`を指定できます。
+- `id`（任意）: idを指定できます。
 
 ### DropdownMenu.ListItem
 - `onClick`（必須）: 各要素をクリックした際に実行したい処理を指定してください。
-- `icon`（任意）: DropdownMenu内にアイコンを表示したい場合は、指定することができます。
+- `icon`（任意）: DropdownMenu内にアイコンを表示したい場合は、指定できます。
 
 ## Text
 テキストのみのDropdownMenuです
