--- a/packages/spindle-ui/src/HeroCarousel/HeroCarousel.mdx
+++ b/packages/spindle-ui/src/HeroCarousel/HeroCarousel.mdx
@@ -33,3 +33,16 @@ import '@openameba/spindle-ui/HeroCarousel/HeroCarousel.css';
   `}
 />
 
+carouselListはlink, imageUrl, titleの3つからなります。titleが2行以上になる場合は三点リーダーで省略されます。
+
+## このコンポーネントでやっていること
+
+- スライドの自動再生を停止/再開するボタンが配置されています。また、前後のスライドに移動するボタンも配置されています
+- キーボード・フォーカスがスライドに入っているとき、自動再生は止まります。また、スライドにマウス・ホバーしているときも止まります
+- reduced motionが指定された時に、アニメーションを軽減または削除します
+
+## 利用時に注意してほしいこと
+
+- HeroCarouselは、表示するコンテンツが複数存在する前提で実装されています。そのため、1つのコンテンツに対して使用することは避けてください
+- コンテンツが1つもない場合、HeroCarouselは表示されません
+
