--- a/packages/spindle-ui/src/Icon/index.mdx
+++ b/packages/spindle-ui/src/Icon/index.mdx
@@ -10,29 +10,16 @@ import * as indexStories from './index.stories';
   code={`import ICON_NAME from '@openameba/spindle-ui/Icon/{ICON_NAME}'`}
 />
 
-<Source
-  language='javascript'
-  code={`import Clock from '@openameba/spindle-ui/Icon/Clock'`}
-/>
-
-<Source
-  language='javascript'
-  code={`import Clock from '@openameba/spindle-ui/Icon/Clock'`}
-/>
-
-<Source
-  language='javascript'
-  code={`import Clock from '@openameba/spindle-ui/Icon/Clock'`}
-/>
+※ `ICON_NAME`はアイコンの名前です。利用したいアイコンの名前を指定してください。
 
 ## Clock Icon
 
-<Story of={indexStories.ClockIcon} />
-
 <Source
   language='javascript'
   code={`import Clock from '@openameba/spindle-ui/Icon/Clock'`}
 />
+
+<Story of={indexStories.ClockIcon} />
 
 <Source
   code={`
@@ -42,12 +29,12 @@ import * as indexStories from './index.stories';
 
 ## Clock Icon Overriding Color
 
-<Story of={indexStories.ClockIconOverridingColor} />
-
 <Source
   language='javascript'
   code={`import Clock from '@openameba/spindle-ui/Icon/Clock'`}
 />
+
+<Story of={indexStories.ClockIconOverridingColor} />
 
 <Source
   code={`
@@ -57,7 +44,22 @@ import * as indexStories from './index.stories';
   `}
 />
 
-## Clock Icon Overriding Size
+## Clock Icon With Size
+
+<Source
+  language='javascript'
+  code={`import Clock from '@openameba/spindle-ui/Icon/Clock'`}
+/>
 
 <Story of={indexStories.ClockIconOverridingSize} />
+
+<Source
+  code={`
+<Clock aria-label="Clock" height="200" width="200" />
+  `}
+/>
+
+## Accessibillity
+
+アイコン単体で使われる場合は、`aria-label`を指定してください。装飾としてアイコンが利用される場合は、`aria-hidden`を`true`に指定してください。
 
