--- a/packages/spindle-ui/src/SegmentedControl/SegmentedControl.mdx
+++ b/packages/spindle-ui/src/SegmentedControl/SegmentedControl.mdx
@@ -30,7 +30,7 @@ import '@openameba/spindle-ui/SegmentedControl/SegmentedControl.css';
 ## 指定できるプロパティ
 
 - `options`(必須): 表示する項目について配列で指定してください。`id`は項目を識別するための値であり、配列内で一意である必要があります。`label`は画面に表示される値です。推奨する最大文字数は10文字です。
-- `selectedId`(必須): optionsプロパティに指定した配列に含まれるidのうち初期選択状態とする項目のidを指定します。selectedIdに一致する項目がない場合、先頭の項目が選択された状態になります。
+- `selectedId`(必須): optionsプロパティに指定した配列に含まれるidのうち初期の選択状態とする項目のidを指定します。selectedIdに一致する項目がない場合、先頭の項目が選択された状態になります。
 - `onClick`(任意): 項目がクリックされたときに追加で行いたい処理がある場合は指定してください。第2引数の`id`には選択された項目のidが渡されます。
 - `size`(任意): SegmentedControlの大きさを指定します。デフォルトは`medium`で、その他にも`large`を指定できます。
 
