fix(spindle-ui): inlineNotificationの表示崩れ対応

--- a/packages/spindle-ui/src/InlineNotification/InlineNotification.mdx
+++ b/packages/spindle-ui/src/InlineNotification/InlineNotification.mdx
@@ -119,7 +119,7 @@ Avatar画像に関してはalt属性をPropsとして提供しているため、
 ## Variant
 通知の内容によって、`variant`3種類と`emphasis`2種類を組み合せて使用してください。variantの初期値は`information`、emphasisの初期値は`false`です。
 
-## Information
+### Information
 
 システム上で処理が実行された事を報告するときに使用します。必ずしも情報がユーザーにとって喜ばしくない状況で使用することが多いです。
 
@@ -142,6 +142,7 @@ Avatar画像に関してはalt属性をPropsとして提供しているため、
 主にユーザーが行なったアクションに対して実行が成功した時などに使用します。情報がユーザーにとって喜ばしい状況で使用します。
 
 <Story of={InlineNotificationStories.ConfirmationNotification} />
+<Story of={InlineNotificationStories.ConfirmationEmphasis} />
 
 <Source
   code={`
@@ -156,12 +157,11 @@ Avatar画像に関してはalt属性をPropsとして提供しているため、
   `}
 />
 
-<Story of={InlineNotificationStories.ConfirmationEmphasis} />
-
 ### Error
 システム上で処理が実行された際に、ユーザーの想定外のエラーが起きた時に使用します。エラー以外の否定的な動作には`Error`は使わずに、`Information`を使用してください。
 
 <Story of={InlineNotificationStories.ErrorNotification} />
+<Story of={InlineNotificationStories.ErrorEmphasis} />
 
 <Source
   code={`
@@ -175,8 +175,6 @@ Avatar画像に関してはalt属性をPropsとして提供しているため、
 </InlineNotification.Frame>
   `}
 />
-
-<Story of={InlineNotificationStories.ErrorEmphasis} />
 
 ## Layout
 状況によって、`layout`2種類の形状を使い分けて使用してください。初期値は`inset`です。
