fix(spindle-ui): containerからframeに変更

--- a/packages/spindle-ui/src/Table/Table.mdx
+++ b/packages/spindle-ui/src/Table/Table.mdx
@@ -614,7 +614,7 @@ import '@openameba/spindle-ui/Table/Table.css';
 
 <Source
   language="html"
-  code={`<div class="spui-Table-container spui-Table-container--scrollable">
+  code={`<div class="spui-Table-frame spui-Table-frame--scrollable">
   <table class="spui-Table spui-Table--horizontal spui-Table--vertical spui-Table--scrollable">
     <thead class="spui-Table-header">
       <tr class="spui-Table-row">
