feat(spindle-ui): ratingコンポーネントの指摘事項対応

--- a/packages/spindle-ui/src/Rating/Rating.mdx
+++ b/packages/spindle-ui/src/Rating/Rating.mdx
@@ -8,7 +8,7 @@ import * as RatingStories from './Rating.stories';
 <Source
   language="javascript"
   code={`
-import { Rating } from '@openameba/spindle-ui';
+import { Rating } from '@openameba/spindle-ui/Rating/Rating';
 import '@openameba/spindle-ui/Rating/Rating.css';
   `}
 />
