--- a/packages/spindle-ui/src/Rating/Rating.mdx
+++ b/packages/spindle-ui/src/Rating/Rating.mdx
@@ -25,7 +25,7 @@ import '@openameba/spindle-ui/Rating/Rating.css';
 
 ## 値の刻みについて
 
-`value`は0.1刻みで指定できます（小数第1位で四捨五入されます）。
+`value`は0.1刻みで指定できます（小数第1位以下で四捨五入されます）。
 
 <Source language="jsx" code={`<Rating max={5} value={3.7} size="medium" />`} />
 
