--- a/packages/spindle-ui/src/InlineNotification/InlineNotification.mdx
+++ b/packages/spindle-ui/src/InlineNotification/InlineNotification.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Source } from '@storybook/blocks';
+import { Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import * as InlineNotificationStories from './InlineNotification.stories';
 
 <Meta of={InlineNotificationStories} />
