--- a/packages/spindle-ui/src/NavigationTab/UnderlineTab/UnderlineTab.mdx
+++ b/packages/spindle-ui/src/NavigationTab/UnderlineTab/UnderlineTab.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Source } from '@storybook/blocks';
+import { Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import * as UnderlineTabStories from './UnderlineTab.stories';
 
 <Meta of={UnderlineTabStories} />
