--- a/packages/spindle-ui/src/SnackBar/SnackBar.mdx
+++ b/packages/spindle-ui/src/SnackBar/SnackBar.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Source } from '@storybook/blocks';
+import { Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import * as SnackBarStories from './SnackBar.stories';
 
 <Meta of={SnackBarStories} />
