--- a/packages/spindle-ui/src/Table/Table.mdx
+++ b/packages/spindle-ui/src/Table/Table.mdx
@@ -1,4 +1,4 @@
-import { Meta, Primary, Controls, Story, Source } from '@storybook/blocks';
+import { Meta, Primary, Controls, Story, Source } from '@storybook/addon-docs/blocks';
 import { Table } from './Table';
 import * as TableStories from './Table.stories';
 
