--- a/packages/spindle-hooks/src/useCarousel/useCarousel.mdx
+++ b/packages/spindle-hooks/src/useCarousel/useCarousel.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Source } from '@storybook/blocks';
+import { Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import * as useCarouselStories from './useCarousel.stories';
 
 <Meta of={useCarouselStories} />
