--- a/packages/spindle-hooks/src/useTimeDistance/useTimeDistance.mdx
+++ b/packages/spindle-hooks/src/useTimeDistance/useTimeDistance.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Source } from '@storybook/blocks';
+import { Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import * as useTimeDistanceStories from './useTimeDistance.stories';
 
 <Meta of={useTimeDistanceStories} />
