--- a/packages/spindle-ui/src/Breadcrumb/Breadcrumb.mdx
+++ b/packages/spindle-ui/src/Breadcrumb/Breadcrumb.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Source } from '@storybook/blocks';
+import { Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import * as BreadcrumbStories from './Breadcrumb.stories';
 
 <Meta of={BreadcrumbStories} />
