--- a/packages/spindle-ui/src/ButtonGroup/ButtonGroup.mdx
+++ b/packages/spindle-ui/src/ButtonGroup/ButtonGroup.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Source } from '@storybook/blocks';
+import { Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import * as ButtonGroupStories from './ButtonGroup.stories';
 
 <Meta of={ButtonGroupStories} />
