--- a/packages/spindle-ui/src/Form/ButtonSwitch/ButtonSwitch.mdx
+++ b/packages/spindle-ui/src/Form/ButtonSwitch/ButtonSwitch.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Source } from '@storybook/blocks';
+import { Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import * as ButtonSwitchStories from './ButtonSwitch.stories';
 
 <Meta of={ButtonSwitchStories} />
