--- a/packages/spindle-ui/src/Form/DropDown.mdx
+++ b/packages/spindle-ui/src/Form/DropDown.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Source } from '@storybook/blocks';
+import { Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import * as DropDownStories from './DropDown.stories';
 
 <Meta of={DropDownStories} />
