--- a/packages/spindle-ui/src/Form/InlineDropDown.mdx
+++ b/packages/spindle-ui/src/Form/InlineDropDown.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Source } from '@storybook/blocks';
+import { Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import * as InlineDropDownStories from './InlineDropDown.stories';
 
 <Meta of={InlineDropDownStories} />
