--- a/packages/spindle-ui/src/Form/InvalidMessage.mdx
+++ b/packages/spindle-ui/src/Form/InvalidMessage.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Source } from '@storybook/blocks';
+import { Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import * as InvalidMessageStories from './InvalidMessage.stories';
 
 <Meta of={InvalidMessageStories} />
