--- a/packages/spindle-ui/src/Form/Radio.mdx
+++ b/packages/spindle-ui/src/Form/Radio.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Source } from '@storybook/blocks';
+import { Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import * as RadioStories from './Radio.stories';
 
 <Meta of={RadioStories} />
