--- a/packages/spindle-ui/src/Form/TextArea.mdx
+++ b/packages/spindle-ui/src/Form/TextArea.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Source } from '@storybook/blocks';
+import { Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import * as TextAreaStories from './TextArea.stories';
 
 <Meta of={TextAreaStories} />
