--- a/packages/spindle-ui/src/Form/TextField.mdx
+++ b/packages/spindle-ui/src/Form/TextField.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Source } from '@storybook/blocks';
+import { Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import * as TextFieldStories from './TextField.stories';
 
 <Meta of={TextFieldStories} />
