--- a/packages/spindle-ui/src/Form/ToggleSwitch.mdx
+++ b/packages/spindle-ui/src/Form/ToggleSwitch.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Source } from '@storybook/blocks';
+import { Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import * as ToggleSwitchStories from './ToggleSwitch.stories';
 
 <Meta of={ToggleSwitchStories} />
