--- a/packages/spindle-ui/src/HeroCarousel/HeroCarousel.mdx
+++ b/packages/spindle-ui/src/HeroCarousel/HeroCarousel.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Source } from '@storybook/blocks';
+import { Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import * as HeroCarouselStories from './HeroCarousel.stories';
 
 <Meta of={HeroCarouselStories} />
