--- a/packages/spindle-ui/src/Icon/index.mdx
+++ b/packages/spindle-ui/src/Icon/index.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Source } from '@storybook/blocks';
+import { Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import * as indexStories from './index.stories';
 
 <Meta of={indexStories} />
