--- a/packages/spindle-ui/src/LinkButton/LinkButton.mdx
+++ b/packages/spindle-ui/src/LinkButton/LinkButton.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Source } from '@storybook/blocks';
+import { Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import * as LinkButtonStories from './LinkButton.stories';
 
 <Meta of={LinkButtonStories} />
