--- a/packages/spindle-ui/src/List/MoreLink.mdx
+++ b/packages/spindle-ui/src/List/MoreLink.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Source } from '@storybook/blocks';
+import { Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import * as MoreLinkStories from './MoreLink.stories';
 
 <Meta of={MoreLinkStories} />
