--- a/packages/spindle-ui/src/Modal/SemiModal.mdx
+++ b/packages/spindle-ui/src/Modal/SemiModal.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Source } from '@storybook/blocks';
+import { Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import * as SemiModalStories from './SemiModal.stories';
 
 <Meta of={SemiModalStories} />
