--- a/packages/spindle-ui/src/Rating/Rating.mdx
+++ b/packages/spindle-ui/src/Rating/Rating.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Source } from '@storybook/blocks';
+import { Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import * as RatingStories from './Rating.stories';
 
 <Meta of={RatingStories} />
