--- a/packages/spindle-ui/src/StackNotificationManager/StackNotificationManager.mdx
+++ b/packages/spindle-ui/src/StackNotificationManager/StackNotificationManager.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Source } from '@storybook/blocks';
+import { Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import * as StackNotificationManagerStories from './StackNotificationManager.stories';
 
 <Meta of={StackNotificationManagerStories} />
