--- a/packages/spindle-ui/src/SubtleButton/SubtleButton.mdx
+++ b/packages/spindle-ui/src/SubtleButton/SubtleButton.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Source } from '@storybook/blocks';
+import { Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import * as SubtleButtonStories from './SubtleButton.stories';
 
 <Meta of={SubtleButtonStories} />
