fix(spindle-ui): ランタイムのエラーを修正

--- a/packages/spindle-ui/src/Toast/Toast.mdx
+++ b/packages/spindle-ui/src/Toast/Toast.mdx
@@ -114,7 +114,7 @@ import '@openameba/spindle-ui/Toast/Toast.css';
 
 ## Error
 
-<Story of={ToastStories.Error} />
+<Story of={ToastStories.ErrorVariant} />
 
 <Source
   code={`<Toast active={true} variant="error" icon={<ExclamationmarkCircleFill />}>メッセージが届きました</Toast>`}
