docs(spindle-ui): add Baseline section to design-doc and mdx files

--- a/packages/spindle-ui/src/Dialog/Dialog.mdx
+++ b/packages/spindle-ui/src/Dialog/Dialog.mdx
@@ -213,3 +213,8 @@ function DialogExample() {
   `}
 />
 
+## Baseline
+
+- `:has()` (Baseline 2023) - [MDN](https://developer.mozilla.org/en-US/docs/Web/CSS/:has)
+  - `html:has(.spui-Dialog:modal)`を使用して、モーダル表示時にページのスクロールを無効化しています
+
