--- a/packages/spindle-ui/src/Form/InvalidMessage/InvalidMessage.mdx
+++ b/packages/spindle-ui/src/Form/InvalidMessage/InvalidMessage.mdx
@@ -126,3 +126,7 @@ const [hasError, setHasError] = useState(false);
 - 通知用の要素を作成し、そこに`role="alert"`を指定してエラーメッセージの内容を動的に更新する
 
 アプリケーションの要件に応じて、エラーメッセージを表示する要素や表示タイミングを工夫し適切な方法を選択してください。重複通知にならないように注意してください。
+
+## Baseline
+
+Widely available
