--- a/packages/spindle-ui/src/Form/TextField/TextField.mdx
+++ b/packages/spindle-ui/src/Form/TextField/TextField.mdx
@@ -93,3 +93,8 @@ import '@openameba/spindle-ui/Form/TextField.css';
   `}
 />
 
+## Baseline
+
+- `:user-invalid` (Baseline 2023) - [MDN](https://developer.mozilla.org/en-US/docs/Web/CSS/:user-invalid)
+  - フォームバリデーション時にエラー表示に使用しています
+
