--- a/packages/spindle-ui/src/Modal/AppealModal/AppealModal.mdx
+++ b/packages/spindle-ui/src/Modal/AppealModal/AppealModal.mdx
@@ -294,3 +294,8 @@ AppealModalで定義されていない要素は利用時に追加してカスタ
 </AppealModal.StyleOnly>
   `}
 />
+
+## Baseline
+
+- `:has()` (Baseline 2023) - [MDN](https://developer.mozilla.org/en-US/docs/Web/CSS/:has)
+  - `html:has(.spui-AppealModal[open])`を使用して、モーダル表示時にページのスクロールを無効化しています
