--- a/packages/spindle-ui/src/Modal/SemiModal/SemiModal.mdx
+++ b/packages/spindle-ui/src/Modal/SemiModal/SemiModal.mdx
@@ -247,3 +247,8 @@ Spindle UIのSemi Modalは[HTMLDialogElement](https://developer.mozilla.org/en-U
   </SemiModal.Contents>
 </SemiModal.StyleOnly>`}
 />
+
+## Baseline
+
+- `:has()` (Baseline 2023) - [MDN](https://developer.mozilla.org/en-US/docs/Web/CSS/:has)
+  - `html:has(.spui-SemiModal[open])`を使用して、モーダル表示時にページのスクロールを無効化しています
