--- a/packages/spindle-ui/src/Rating/Rating.mdx
+++ b/packages/spindle-ui/src/Rating/Rating.mdx
@@ -103,3 +103,7 @@ import '@openameba/spindle-ui/Rating/Rating.css';
 <Story of={RatingStories.NegativeClamped} />
 
 <Source language="jsx" code={`<Rating max={5} value={-1} size="medium" />`} />
+
+## Baseline
+
+Widely available
