--- a/packages/spindle-ui/src/TextButton/TextButton.mdx
+++ b/packages/spindle-ui/src/TextButton/TextButton.mdx
@@ -180,3 +180,7 @@ import '@openameba/spindle-ui/TextButton/TextButton.css';
 />
 
 なおフォントサイズは他のSpindle UIコンポーネントと同様に親要素からのサイズを継承します。
+
+## Baseline
+
+Widely available
