--- a/packages/spindle-ui/src/TextLink/TextLink.mdx
+++ b/packages/spindle-ui/src/TextLink/TextLink.mdx
@@ -131,3 +131,7 @@ import '@openameba/spindle-ui/TextLink/TextLink.css';
 />
 
 なおフォントサイズは他のSpindle UIコンポーネントと同様に親要素からのサイズを継承します。
+
+## Baseline
+
+Widely available
