--- a/packages/spindle-ui/src/Toast/Toast.mdx
+++ b/packages/spindle-ui/src/Toast/Toast.mdx
@@ -225,3 +225,7 @@ import '@openameba/spindle-ui/Toast/Toast.css';
 
 StackNotificationManagerを使用することでToastやSnackBarをスタックして複数表示できます。
 詳しくは[StackNotificationManager のドキュメント](/docs/stacknotificationmanager--docs)を参照してください。
+
+## Baseline
+
+Widely available
