--- a/packages/spindle-ui/src/Button/Button.mdx
+++ b/packages/spindle-ui/src/Button/Button.mdx
@@ -279,3 +279,7 @@ import '@openameba/spindle-ui/Button/Button.css';
 
 ## Browser Compatibility
 active時やhover時など各stateのスタイルは、ブラウザごとに異なります。詳しくは[ButtonのStateパターン変更](https://github.com/openameba/spindle/issues/13)を参照してください。
+
+## Baseline
+
+Widely available
