--- a/packages/spindle-ui/src/Form/TextArea/TextArea.mdx
+++ b/packages/spindle-ui/src/Form/TextArea/TextArea.mdx
@@ -60,3 +60,8 @@ import '@openameba/spindle-ui/Form/TextArea.css';
   `}
 />
 
+## Baseline
+
+- `:user-invalid` (Baseline 2023) - [MDN](https://developer.mozilla.org/en-US/docs/Web/CSS/:user-invalid)
+  - フォームバリデーション時にエラー表示に使用しています
+
