--- a/packages/spindle-ui/src/IconButton/IconButton.mdx
+++ b/packages/spindle-ui/src/IconButton/IconButton.mdx
@@ -169,3 +169,7 @@ import '@openameba/spindle-ui/IconButton/IconButton.css';
 ## Browser Compatibility
 
 active時やhover時など各stateのスタイルは、ブラウザごとに異なります。詳しくは[ButtonのStateパターン変更](https://github.com/openameba/spindle/issues/13)を参照してください。
+
+## Baseline
+
+Widely available
